--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@nextui-org/react": "2.2.9",
     "@prisma/client": "^5.17.0",
     "framer-motion": "11.3.8",
-    "next": "14.0.2",
+    "next": "^14.2.5",
     "next-auth": "5.0.0-beta.3",
     "prisma": "^5.17.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
